--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "express": "^4.16.4",
+    "express-asyncify": "^1.0.0",
     "express-session": "^1.17.0",
     "helmet": "^3.21.2",
     "http-errors": "^1.6.3",
     "jade": "^1.11.0",
+    "memorystore": "^1.6.1",
     "mongoose": "^5.8.7",
     "morgan": "^1.9.1",
     "pug": "^2.0.4",
